--- a/pagina2.html
+++ b/pagina2.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, reprehenderit error voluptatem vitae aperiam doloribus sint possimus quis consequatur facilis voluptatum, cum iste, praesentium eos? Inventore corrupti reiciendis optio nesciunt!</p>
+    <ul>
+        <li>hola</li>
+    </ul>
 </body>
 </html>
